Initial synchronization over libp2p

--- a/polyepoxide-core/Cargo.toml
+++ b/polyepoxide-core/Cargo.toml
@@ -16,3 +16,4 @@ default = ["derive"]
 derive = ["polyepoxide-derive"]
 
 [dev-dependencies]
+tokio = { version = "1", features = ["rt", "macros"] }
