--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["polyepoxide-core", "polyepoxide-derive"]
+members = ["polyepoxide-core", "polyepoxide-derive", "polyepoxide-rocks"]
