--- a/polyepoxide-rs/polyepoxide-core/Cargo.toml
+++ b/polyepoxide-rs/polyepoxide-core/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-blake3 = "1.8.2"
-ciborium = "0.2.2"
+cid = "0.11"
+ipld-core = "0.4"
+multihash-codetable = { version = "0.1", features = ["blake3"] }
+serde_ipld_dagcbor = "0.6"
 indexmap = { version = "2.12.1", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
