--- a/polyepoxide-rs/polyepoxide-rocks/Cargo.toml
+++ b/polyepoxide-rs/polyepoxide-rocks/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 polyepoxide-core = { path = "../polyepoxide-core" }
+cid = "0.11"
 rocksdb = "0.23"
 thiserror = "2.0.17"
 
