Move polyepoxide workspace into a subdirectory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-/target/
-Cargo.lock
+# IDE
+.idea/
+.vscode/
+*.iml
+*.code-workspace
+
+# OS
+.DS_Store
+Thumbs.db
+*~
+
+# Editor
+*.swp
+*.swo
+.*.sw?
