--- a/polyepoxide-rs/polyepoxide-core/Cargo.toml
+++ b/polyepoxide-rs/polyepoxide-core/Cargo.toml
@@ -11,6 +11,7 @@ serde_ipld_dagcbor = "0.6"
 indexmap = { version = "2.12.1", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 thiserror = "2.0.17"
+log = "0.4"
 polyepoxide-derive = { path = "../polyepoxide-derive", optional = true }
 
 [features]
